# package-template

./: .buildinfo  .readthedocs.yaml  CODE_OF_CONDUCT.md  README.rst  checklist.html  ci.html  codespell-ignore.txt  cookiecutter.json  data.html  docs.html  extensions.html  genindex.html  index.html  minimal.html  objects.inv  releasing.html  scripts.html  search.html  searchindex.js  tests.html  tox.html  tox.ini
.doctrees/: checklist.doctree  ci.doctree  data.doctree  docs.doctree  environment.pickle  extensions.doctree  index.doctree  minimal.doctree  releasing.doctree  scripts.doctree  tests.doctree  tox.doctree
.doctrees/advanced/: index.doctree  versioning.doctree
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md  feature_request.md
.github/workflows/: dependabot.yml  label_pull_request.yaml  sphinx-deploy.yml  tests.yml
_sources/: ci.rst.txt  docs.rst.txt  index.rst.txt  minimal.rst.txt
_static/: alabaster.css
advanced/: index.html  versioning.html
docs/: checklist.rst  conf.py  docs.rst  index.rst  minimal.rst  releasing.rst  tests.rst
docs/advanced/: versioning.rst
hooks/: post_gen_project.py
tests/: conftest.py  test_hooks.py  test_package.py
{{ cookiecutter.package_name }}/: .gitignore  .pre-commit-config.yaml  CHANGES.rst  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.rst  pyproject.toml  tox.ini
{{ cookiecutter.package_name }}/.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PR_TEMPLATE.md  dependabot.yml  labeler.yml
{{ cookiecutter.package_name }}/.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md  PR_TEMPLATE.md
{{ cookiecutter.package_name }}/.github/workflows/: changelog.yml  labeler.yml  pre-commit.yml  run_labeler.yml  sphinx-deploy.yml  sub_package_update.yml
{{ cookiecutter.package_name }}/_dev/: scm_version.py
{{ cookiecutter.package_name }}/docs/: changes.rst  conf.py  index.rst  installation.rst  usage.rst
{{ cookiecutter.package_name }}/licenses/: LICENSE
{{ cookiecutter.package_name }}/{{ cookiecutter.module_name }}/: __init__.py
{{ cookiecutter.package_name }}/{{ cookiecutter.module_name }}/tests/: test_version_string.py
